comments & minor adjustments