@@ -21,44 +21,43 @@ public class IRatingCheckerController {
 
     @GetMapping("/iRatingChecker")
     public String showIRatingCheckerPage() {
-        return "iRatingChecker"; // This corresponds to the iRatingChecker.html template
+        return "iRatingChecker";                    // Shows the iRatingChecker page.
     }
 
     @PostMapping("/upload")
-    public ModelAndView handleFileUpload(@RequestParam("csvFile") MultipartFile csvFile,
-                                         @RequestParam("txtFile") MultipartFile txtFile) throws Exception {
-        List<String> targetCustomerIds = new BufferedReader(new InputStreamReader(txtFile.getInputStream(), StandardCharsets.UTF_8))
-                .lines().collect(Collectors.toList());
+    public ModelAndView handleFileUpload(@RequestParam("csvFile") MultipartFile csvFile, @RequestParam("txtFile") MultipartFile txtFile) throws Exception { // With @RequestParam I allow the method to accept a  csv file (and txt file later)
+        List<String> targetCustomerIds = new BufferedReader(new InputStreamReader(txtFile.getInputStream(), StandardCharsets.UTF_8)).lines().toList();      // Using a BR to read the lines in the txt file and adds this to a list.
 
-        List<Pilot> pilots = new BufferedReader(new InputStreamReader(csvFile.getInputStream(), StandardCharsets.UTF_8))
-                .lines().skip(1) // Skip CSV header
-                .map(this::mapToPilot)
-                .filter(pilot -> targetCustomerIds.contains(String.valueOf(pilot.getCustomerId())))
-                .collect(Collectors.toList());
+        List<Pilot> pilots = new BufferedReader(new InputStreamReader(csvFile.getInputStream(), StandardCharsets.UTF_8))    // Using a BR to read the CSV file.
+                .lines().skip(1)                                                                                         // Skips CSV header
+                .map(this::mapToPilot)                                                                                      // Maps each line to a Pilot object
+                .filter(pilot -> targetCustomerIds.contains(String.valueOf(pilot.getCustomerId())))                         // Running a filter that filters to only include the matching customerIDs
+                .collect(Collectors.toList());                                                                              // Then collects this and adds it to the list.
 
-        ModelAndView modelAndView = new ModelAndView("results");
-        modelAndView.addObject("pilots", pilots);
-        return modelAndView;
+        ModelAndView modelAndView = new ModelAndView("results");                    // Creating a ModelAndView Object
+        modelAndView.addObject("pilots", pilots);                                // The filtered pilots now are added to the ModelAndView object with the pilots key.
+        return modelAndView;                                                                 // Returns the ModelAndView so the results can be accessed as a list.
     }
 
     private Pilot mapToPilot(String line) {
-        String[] values = line.split(",");
-        String fullName = values[0];
-        int customerId;
+        String[] values = line.split(",");          // Splits the lines when the , is found
+        String fullName = values[0];                      // fullName is the first value found in the CSV.
+        int customerId;                                   // Declaring the customerId & iRating
         int iRating;
 
+        // CustomerID & iRating are the second and fifteenth column. Using a try/catch block since some users have false data that causes errors.
         try {
             customerId = Integer.parseInt(values[1].trim());
         } catch (NumberFormatException e) {
             System.err.println("Error parsing customerId: " + values[1]);
-            customerId = -1; // or handle as needed
+            customerId = -1;
         }
 
         try {
             iRating = Integer.parseInt(values[14].trim());
         } catch (NumberFormatException e) {
             System.err.println("Error parsing iRating: " + values[14]);
-            iRating = -1; // or handle as needed
+            iRating = -1;
         }
 
         return new Pilot(fullName, customerId, iRating);
